rswag for category controller and api namespaces
